add hover to grid items

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* #container:hover {
+.grid-item:hover {
     background-color: aqua;
 }
 
@@ -14,7 +14,7 @@ body {
     width: 960px;
     height: 960px;
     
-} */
+}
 
 :root {
     --grid-cols: 1;
