--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,49 @@
 .grid-item:hover {
     background-color: var(--blueCol);
+    transform-style: var(--redCol);
 }
 
 .colored {
-    background-color: var(--blueCol)
+    background-color: var(--yelCol);
 }
     
 body {
     display: flex; 
     align-items: center;
     justify-content: center;
-
+    flex-direction: column;
+    background: radial-gradient(rgb(139, 191, 159), rgb(89, 52, 79));
+    flex-basis: 100;
 }
 
+#header {
+    color: antiquewhite;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    font-size: x-large;
+}
 
-#container{
+#container {
     width: 960px;
     height: 960px;
-    
 }
-
 
 :root {
     --grid-cols: 1;
     --grid-rows: 1;
-    --blueCol: blue;
-    --redCol: red;
-    --yelCol: yellow;
+    --blueCol: rgba(93, 93, 202, 0.815);
+    --redCol: rgb(194, 73, 73);
+    --yelCol: rgb(105, 96, 56);
     --randomCol: "";
 }
 
 #container {
+    margin-top: 2vmin;
     display: grid;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
+    background-color: rgba(255, 255, 255, 0.082);
+   
 }
 
 .grid-item {
@@ -41,3 +51,30 @@ body {
     border: 1px solid #ddd;
     text-align: center;
 }
+
+.button-container {
+    display: flex;
+    margin-top: 2vmin;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 10vmin;
+}
+
+#clear-btn, #reset{
+    width: 90px;
+    height: 40px;
+    border-radius: 20%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:900;
+    color: antiquewhite;
+    background-color: var(--randomCol);
+} 
+
+
+
+
+
+
